--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "gray-matter": "^4.0.3",
+    "mongoose": "^8.4.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
