--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "bcrypt": "^5.1.1",
     "gray-matter": "^4.0.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "next": "14.2.3",
     "react": "^18",
